# TegakiNote

./: .gitignore  README.md  pyproject.toml
src/: tegaki2tex.py
